Thu Mar 22 19:27:34 2001  Jonathan Blandford  <jrb@redhat.com>

	* gtk/gtkcellrenderertoggle.c (gtk_cell_renderer_toggle_render):
	fix braino.
	* gtk/gtktreesortable.[ch]: New interface to add cleanup sortable
	support.

	* gtk/gtktreeview.c: Addition of initial sortable support.

	* gtk/gtktreestore.c: Addition of initial sortable support.

	* gtk/gtkliststore.c: Addition of initial sortable support.

	* gtk/gtkmarshal.list: yet another marshaller.

	* gtk/gtktreedatallist.[ch]: shared code between the store models
	for handling sorting headers.

2001-03-22  Havoc Pennington  <hp@redhat.com>

	* gtk/gtkcontainer.c (gtk_container_set_focus_chain): 
	(gtk_container_unset_focus_chain): Add ability to override the 
	focus chain for a container explicitly

Thu Mar 22 13:01:44 2001  Tim Janik  <timj@gtk.org>

	* gtk/gtklabel.[hc]: some cleanups, fixed mnemonic_widget handling,
	added PROP_MNEMONIC_WIDGET.

	* gtk/gtkwindow.c (gtk_window_activate_mnemonic): 
	(gtk_window_remove_mnemonic): 
	(gtk_window_add_mnemonic): fixed assertions.
	(gtk_window_activate_mnemonic): constrain modifier checks to those
	permitted by gtk_accelerator_get_default_mod_mask().
	got rid of gtk_window_get_default_accel_group().

	* gtk/gtkwidget.c (gtk_widget_real_activate_mnemonic): handle non
	activatable widgets either by focussing or a warning.
	added a signal accumulator to ::activate_mnemonic which stops the
	emission once a handler returned TRUE.

2001-03-22  Havoc Pennington  <hp@pobox.com>

	* gtk/gtktoolbar.c (gtk_toolbar_insert_stock): handle mnemonics in
	the stock item label

	* gtk/gtklabel.c: s/@gtk_func/gtk_func()/ in docs

	* gtk/gtkstock.c (builtin_items): add mnemonics where missing

	* demos/gtk-demo/*.c: Add mnemonics all over the place

	* gtk/gtklabel.h: mark parse_uline deprecated

2001-03-21  Alexander Larsson  <alexl@redhat.com>

	* gtk/gtkitemfactory.[ch]:
	Add support for stock and normal imagemenuitems.
	
	* gtk/testgtk.c: