@@ -778,7 +778,7 @@ gtk_tree_view_column_set_attributes (GtkTreeViewColumn *tree_column,
  **/
 void
 gtk_tree_view_column_set_cell_data_func (GtkTreeViewColumn *tree_column,
-					 CellDataFunc       func,
+					 GtkCellDataFunc    func,
 					 gpointer           func_data,
 					 GtkDestroyNotify   destroy)
 {
